unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/CMPL123__Job_Field_Map__c.object-meta.xml
<CustomObject>
    <description>123 Job Field Mapping</description>
    <label>Job Field Mapping</label>
    <nameField>
        <displayFormat>JFM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>