unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Data_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Data_Type__c</fullName>
        <description>Data Type</description>
        <inlineHelpText>Data Type</inlineHelpText>
        <label>Data Type</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>