unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Field_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field_Name__c</fullName>
        <description>Field Name</description>
        <inlineHelpText>Field Name</inlineHelpText>
        <label>Field Name</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>