unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Is_Dynamic__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reference</label>
        <type>Checkbox</type>
    </CustomField>