unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Parent_Job__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Parent_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Job</label>
        <referenceTo>CMPL123__X123Job__c</referenceTo>
        <relationshipName>JobFieldMaps</relationshipName>
        <type>Lookup</type>
    </CustomField>