unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Relationship_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>