unpackaged/main/default/objects/CMPL123__Job_Field_Map__c/fields/CMPL123__Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Value__c</fullName>
        <description>Value</description>
        <inlineHelpText>Value</inlineHelpText>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>